# MusicPlayerApp

./: .gitignore  CMakeLists.txt  build.sh  full_build.sh  lv_conf.h
scripts/compile/: compile.sh
scripts/environment/: environment_setup.sh
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt
src/api/audio/: AudioChunk.cpp  AudioStream.cpp  AudioStream.h  CMakeLists.txt  audio_chunk.cpp  audio_chunk.h  audio_stream.cpp
src/api/audio/backends/: IAudioBackend.h  PortAudioBackend.cpp  PortAudioBackend.h
src/api/audio/reader/: IAudioReader.h  SndlibAudioReader.cpp  SndlibAudioReader.h  iaudio_reader.h  sndlib_audio_reader.cpp  sndlib_audio_reader.h
src/api/audio/resampler/: SRAudioResampler.cpp  SRAudioResampler.h  sr_audio_resampler.cpp
src/api/audio/stream/: IBasicAudioStream.h  PortAudioStream.cpp  PortAudioStream.h  ibasic_audio_stream.h  port_audio_stream.cpp  port_audio_stream.h
src/api/libaudio/: CMakeLists.txt
src/api/libaudio/libaudio/: audio_buffer.cpp  audio_buffer.h  audio_stream.cpp  audio_stream.h
src/api/libaudio/libaudio/reader/: iaudio_reader.h  sndlib_audio_reader.cpp  sndlib_audio_reader.h
src/api/libaudio/libaudio/resampler/: sr_audio_resampler.cpp
src/api/libaudio/libaudio/stream/: ibasic_audio_stream.h  port_audio_stream.cpp  port_audio_stream.h
src/api/liblvglcpp/: CMakeLists.txt
src/api/liblvglcpp/liblvglcpp/: lvgl_cpp.cpp  lvgl_cpp.h  lvgl_cpp_util.h
src/api/liblvglcpp/liblvglcpp/events/: event_bus.cpp  event_bus.h
src/api/liblvglcpp/liblvglcpp/style/: style.cpp
src/api/liblvglcpp/liblvglcpp/widgets/: 3dtexture.cpp  3dtexture.h  animimage.cpp  animimage.h  arc.cpp  arc.h  bar.cpp  bar.h  btnmatrix.cpp  btnmatrix.h  button.cpp  button.h  calendar.cpp  calendar.h  canvas.cpp  canvas.h  chart.cpp  chart.h  checkbox.cpp  checkbox.h  dropdown.cpp  dropdown.h  image.cpp  image.h  imagebutton.cpp  imagebutton.h  keyboard.cpp  keyboard.h  label.cpp  label.h  led.cpp  led.h  line.cpp  line.h  list.cpp  list.h  lottie.cpp  lottie.h  lv_object.cpp  lv_object.h  (+28 more)
src/api/liblvglcpp/liblvglcpp/widgets/layout/: grid.cpp  grid.h  grid_cell.cpp  grid_cell.h
src/api/lvgl_cpp/: CMakeLists.txt  lvgl_cpp.h
src/api/lvgl_cpp/widgets/: button.h  slider.cpp
src/api/lvgl_cpp/widgets/layout/: grid.h
src/app/: app.cpp  app.h  app_events.cpp  app_events.h
src/app/crypt/: md5.cpp  md5.h
src/app/event/: event_bus.cpp  event_bus.h
src/app/event/messages/: message.h  operation_list_message.h
src/app/event/observable/: observable.h
src/app/gui/: application_view.cpp  application_view.h  main_page.cpp  main_page.h
src/app/gui/pages/: main_page.cpp  main_page.h  page.cpp  page.h
src/app/gui/util/: grid.cpp  grid.h  list.h  style.cpp  style.h  util.cpp  util.h
src/app/gui/widgets/: audio_control.cpp  audio_control.h
src/app/services/: file_watcher_service.cpp  file_watcher_service.h  service.cpp  service.h
src/app/state/: application_model.cpp  application_model.h
src/app/state/audio/: audio_manager.cpp  audio_manager.h
src/app/state/playlist/: playlist_manager.h
src/wrapper/: CMakeLists.txt
src/wrapper/style/: style.h
src/wrapper/widgets/: button.cpp  button.h  label.cpp  label.h  slider.h  widget.cpp  widget.h
src/wrapper/widgets/layout/: grid.cpp  grid_cell.cpp
